--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #e50914;
+  --primary-color: #083f5f;
   --dark-color: #141414;
 }
 
@@ -42,7 +42,7 @@ img {
 
 .showcase {
   width: 100%;
-  height: 93vh;
+  height: 100vh;
   position: relative;
   background: url(../img/background.png) no-repeat center center/cover;
 }
@@ -56,7 +56,7 @@ img {
   height: 100%;
   z-index: 1;
   background: rgb(0, 0, 0, 0.6);
-  box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
+  box-shadow: inset 30px 30px 30px #000000, inset -30px -30px 30px #000000;
 }
 
 .showcase-top {
@@ -74,6 +74,7 @@ img {
 }
 
 .showcase-top a {
+  margin-top:2rem;
   position: absolute;
   top: 50%;
   right: 0;
@@ -92,6 +93,7 @@ img {
   z-index: 2;
 }
 
+
 .showcase-content h1 {
   /* font-weight:700; */
   font-size: 5.2rem;
@@ -108,16 +110,62 @@ img {
   margin: 0 0 2rem 0;
 }
 
+/* About */
+
+.about{
+  height: 60%;
+  position: relative;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 1rem;
+  padding: 4em 0 5em 0;
+  z-index: 2;
+}
+
+.about:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  /* background: rgb(0, 0, 0, 0.6); */
+  box-shadow: 5px 10px 30px #000000;
+  /* inset 30px 30px 30px #000000, inset -30px -30px 30px #000000; */
+}
+
+.about h1 {
+  /* font-weight:700; */
+  font-size: 3rem;
+  line-height: 1.1;
+  margin: 0 0 2rem 0;
+}
+
+.about p {
+  color: #aaa;
+  /* font-weight:400; */
+  font-size: 1.5rem;
+  line-height: 1.25;
+  margin: 3rem 0 2rem 0;
+  padding: 0rem 5.5rem
+}
+
+
 /* Tabs */
 .tabs {
   background: var(--dark-color);
-  padding-top:1rem;
+  /* padding-top:rem; */
   border-bottom: 3p solid #3d3d3d;
 }
 
 .tabs .container{
   display:grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(2,1fr);
   grid-gap: 1rem;
   align-items: center;
   justify-content: center;
@@ -164,18 +212,34 @@ img {
 /* #tab-1-content  */
 .tab-1-content-inner{
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2rem;
+  /* grid-template-columns: repeat(2, 1fr); */
+  grid-gap: 0rem;
   align-items: center;
   justify-content: center;
 }
 
+.tab-1-content-inner h1,h2,h3{
+  justify-content: center;
+  padding: 0;
+  margin: 1rem 0rem 2.5rem 0rem;
+}
+
+.tab-1-content-inner h3{
+  justify-content: center;
+  padding: 0;
+  margin: 2rem 0rem 0rem 0rem;
+}
+
+.tab-1-content-inner p{
+
+}
 .tab-2-content-top{
   display:grid;
-  grid-template-columns: 2fr 1fr;
+  /* grid-template-columns: 2fr 1fr; */
   grid-gap:1rem;
-  /* justify-content: center; */
-  /* align-items: center; */
+  justify-content: center;
+  align-items: center;
+  margin:10rem;
 }
 
 .tab-2-content-bottom{
@@ -298,6 +362,8 @@ img {
   font-size: 1rem;
   padding: 0.8rem 1.3rem;
   text-transform: uppercase;
+  color: #ddd;
+
 }
 
 .btn-xl {
@@ -309,6 +375,10 @@ img {
 @media(max-width: 960px){
   .showcase{
     height: 90vh;
+  }
+
+  .showcase2{
+    height: 50vh;
   }
 
   .hide-sm{
@@ -334,10 +404,6 @@ img {
     grid-template-columns: repeat(2, 1fr);
   }
   
-  .btn-xl{
-    font-size: 1.5rem;
-    padding:1.4rem 2rem;
-  }
 
   .text-md{
     font-size: 1.5rem;
